crates/snapshot-tests/tests/snapshots/parser__bad_keys__dotted.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[DottedKeyInvalidType]: dotted key attempted to extend non-table type at `a`
  ┌─ dotted:2:1
  │
1 │ a = 1
  │ - non-table
2 │ a.b = 2
  │ ^ attempted to extend table here


error: dotted key attempted to extend non-table type at `a`
 --> dotted:2:1
  |
1 | a = 1
  | - non-table
2 | a.b = 2
  | ^ attempted to extend table here
Error {
    kind: "DottedKeyInvalidType",
    message: "dotted key attempted to extend non-table type",
    span: 6..7,
    path: Some(
        "a",
    ),
}
